fix: top contact button z-index

--- a/public/style.css
+++ b/public/style.css
@@ -586,6 +586,10 @@ video {
   bottom: 0.5rem;
 }
 
+.z-10 {
+  z-index: 10;
+}
+
 .block {
   display: block;
 }
